[gd_scene load_steps=8 format=2]

[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://enemy_unit.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/panels_enemy.png" type="Texture" id=3]
[ext_resource path="res://HumanAnim.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
resource_local_to_scene = true
flags = 16
atlas = ExtResource( 3 )
region = Rect2( 264, 120, 64, 32 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=3]
resource_local_to_scene = true
flags = 16
atlas = ExtResource( 3 )
region = Rect2( 8, 120, 32, 32 )

[node name="EnemyUnit" type="Control" groups=[
"enemy",
]]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -90.0
margin_right = 30.0
margin_bottom = 50.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 120, 50 )
rect_scale = Vector2( 0.75, 0.75 )
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterDisplay" type="NinePatchRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -104.0
margin_right = 6.00049
margin_bottom = 47.0
mouse_filter = 0
texture = SubResource( 1 )
region_rect = Rect2( 264, 120, 64, 32 )
patch_margin_left = 42
patch_margin_top = 16
patch_margin_right = 42
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CharacterDisplay"]
anchor_right = 1.0
margin_left = 22.3334
margin_top = 11.3333
margin_right = -26.6666
margin_bottom = 21.3333
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Human"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterContainer" type="NinePatchRect" parent="CharacterDisplay"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -46.9024
margin_top = -24.0
margin_right = 1.0979
margin_bottom = 24.0
rect_min_size = Vector2( 32, 32 )
texture = SubResource( 3 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Human" parent="CharacterDisplay/CharacterContainer" instance=ExtResource( 4 )]
flip_h = true

[node name="Tween" type="Tween" parent="CharacterDisplay"]
playback_speed = 5.22
playback/speed = 5.22

[node name="ActionChoice" type="TextureRect" parent="CharacterDisplay"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -112.59
margin_top = 16.6751
margin_right = -96.5898
margin_bottom = 32.6751
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatContainer" type="GridContainer" parent="CharacterDisplay"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -93.4264
margin_top = 22.8631
margin_right = -42.4264
margin_bottom = 38.8631
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 5, 25 )

[connection signal="gui_input" from="CharacterDisplay" to="." method="_on_CharacterDisplay_gui_input"]
[connection signal="tween_all_completed" from="CharacterDisplay/Tween" to="." method="_on_Tween_tween_all_completed"]
